--- a/style.css
+++ b/style.css
@@ -2,55 +2,38 @@
   --starSize: 50px;
 }
 
+.container {
+  height: 95vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
 .grid {
-  height: 900px;
-  width: 900px;
+  width: 95%;
+  height: 95%;
+  /* height: 75vh; */
+  /* aspect-ratio: 1; */
+  /* width: 900px; */
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   gap: 0px 0px;
   border-style: solid;
 }
+/* 
+@media (max-width: 525px) {
+  .grid {
+    height: 70vh;
+  }
+} */
 
-@media (max-height: 950px) {
-  .grid {
-    height: 800px;
-    width: 800px;
-  }
-}
-@media (max-height: 850px) {
-  .grid {
-    height: 700px;
-    width: 700px;
-  }
-}
-@media (max-height: 750px) {
-  .grid {
-    height: 600px;
-    width: 600px;
-  }
-}
-@media (max-height: 650px) {
-  .grid {
-    height: 500px;
-    width: 500px;
-  }
-}
-@media (max-height: 550px) {
-  .grid {
-    height: 400px;
-    width: 400px;
-  }
-}
-@media (max-height: 450px) {
-  .grid {
-    height: 350px;
-    width: 350px;
-  }
-}
 
 .grid div {
   width: auto;
-  aspect-ratio: 1;
+  height: auto;
+  /* aspect-ratio: 1; */
   border: 1px solid rgba(0, 0, 0, 0.1);
   position: relative;
 }
@@ -62,4 +45,27 @@
 .apple {
   background-color: purple;
   border-radius: 50%;
+}
+
+.score {
+  font-size: 2rem;
+}
+
+.start {
+  min-width: 50%;
+  width: auto;
+  padding: 1rem 0;
+  background-color: transparent;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: all 250ms ease;
+  border: black 2px solid
+  
+}
+
+
+.start:hover {
+  background-color: black;
+  color: white;
+  border: white 2px solid
 }
