--- a/style.css
+++ b/style.css
@@ -2,17 +2,40 @@
   --starSize: 50px;
 }
 
-.container {
-  height: 95vh;
+body {
+  /* height: 90vh; */
+  /* width: 90vw; */
+  /* margin: 0 auto; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+.grid-container {
+  width: 95vw;
+  height: 95vh;
+  /* background-color: blue; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-play {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .grid {
-  /* width: 90%; */
-  height: 75%;
+  width: 35%;
+  /* min-height: 80vh; */
+  /* height: 85%; */
   /* height: 75vh; */
   aspect-ratio: 1;
   /* width: 900px; */
@@ -20,14 +43,20 @@
   grid-template-columns: repeat(10, 1fr);
   gap: 0px 0px;
   border-style: solid;
+  
+  position: relative;
+}
+
+.grid::after {
+  content: '';
+  display: block;
+  padding-bottom: 100%;
 }
 
 .grid div {
-  width: auto;
-  /* height: auto; */
   aspect-ratio: 1;
+  /* position: absolute; */
   border: 1px solid rgba(0, 0, 0, 0.1);
-  position: relative;
 }
 
 .snake {
@@ -44,6 +73,7 @@
 }
 
 .start {
+  z-index: 10;
   min-width: 50%;
   width: auto;
   padding: 1rem 0;
@@ -52,6 +82,9 @@
   cursor: pointer;
   transition: all 250ms ease;
   border: black 2px solid;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-around;
 }
 
 .start:hover {
@@ -60,16 +93,32 @@
   border: white 2px solid;
 }
 
-@media (max-width: 750px) {
-  body {
-    background-color: blue;
+@media (max-width: 1700px) {
+  .grid {
+    width: 45%;
 
   }
+
+}
+
+@media (max-width: 1300px) {
   .grid {
-    height: auto;
-    width: 60%;
+    width: 55%;
+
   }
-  .start {
-    background-color: cyan;
+
+}
+@media (max-width: 1000px) {
+  .grid {
+    width: 65%;
+
   }
+
+}
+@media (max-width: 700px) {
+  .grid {
+    width: 85%;
+
+  }
+
 }
